# pulso-electoral

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.code_quality/: ruff.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: app.py
conf/: __init__.py  config.yml
conf/data_collection/: __init__.py  acled.yml  gdelt.yml  reddit.yml  rss_feeds.yml
conf/keywords/: __init__.py  civic_space.yml  election.yml  manipulation.yml  political_figures.yml  slang.yml
conf/nlp/: __init__.py  models.yml
data/sample/: README.md  sample_posts.json
docs/: PRD.md  architecture.md  data_ethics.md  index.md
notebooks/: notebook_template.ipynb
notebooks/1-data/: 01_mgo_rss_collection_20260322.ipynb  02_mgo_acled_collection_20260329.ipynb  02_mgo_reddit_collection_20260322.ipynb  03_mgo_gdelt_acled_collection_20260323.ipynb
notebooks/2-exploration/: 01_mgo_data_overview_20260324.ipynb
notebooks/3-analysis/: 01_mgo_sentiment_analysis_20260324.ipynb  02_mgo_entity_extraction_20260325.ipynb  03_mgo_narrative_topics_20260325.ipynb
notebooks/4-output/: 01_mgo_dataset_export_20260327.ipynb  02_mgo_analysis_summary_20260327.ipynb
notebooks/5-appendix/: 01_mgo_tool_comparison_20260328.ipynb
scripts/: collect_gdelt.py  load_data_to_duckdb.py
src/: __init__.py
src/analysis/: __init__.py  anomaly.py
src/collectors/: __init__.py  acled.py  gdelt.py  reddit.py  rss.py
src/nlp/: __init__.py  analyze.py  entities.py  preprocessing.py  topics.py
src/storage/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py
(+10 files in other folders)
